--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,3 +1,3 @@
-link(href="/bulid/bootstrap/css/bootstrap.min.css", rel="stylesheet")
-script(src="/bulid/js/jquery.min.js")
-script(src="/bulid/bootstrap/js/bootstrap.min.js")
+link(href="/bootstrap/css/bootstrap.min.css", rel="stylesheet")
+script(src="/js/jquery.js")
+script(src="/bootstrap/js/bootstrap.min.js")
