--- a/views/pages/admin.jade
+++ b/views/pages/admin.jade
@@ -1,26 +1,34 @@
 extends ../layout
 
 block content
-    .container
-        .row
-            form.form-horizontal(method="post", action="/admin/movie/new")
-                .form-group
-                    label.col-sm-2.control-label(for="inputTitle") 电影名字
-                    .col-sm-10
-                        input#inputTitle.form-control(tyep="text", name="movie[title]", value="#{movie.title}")
-                .form-group
-                    label.col-sm-2.control-label(for="inputDoctor") 电影导演
-                    .col-sm-10
-                        input#inputDoctor.form-control(tyep="text", name="movie[doctor]", value="#{movie.doctor}")
-                .form-group
-                    label.col-sm-2.control-label(for="inputCountry") 国家
-                    .col-sm-10
-                        input#inputCountry.form-control(tyep="text", name="movie[country]", value="#{movie.country}")
-                .form-group
-                    label.col-sm-2.control-label(for="inputanguage") 语种
-                    .col-sm-10
-                        input#inputanguage.form-control(tyep="text", name="movie[language]", value="#{movie.language}")
-                .form-group
-                    label.col-sm-2.control-label(for="inputLanguage") 海报地址
-                    .col-sm-10
-                        input#inputLanguage.form-control(tyep="text", name="movie[language]", value="#{movie.language}")
+  .container
+    .row
+      form.form-horizontal(method="post", action="/admin/movie/new")
+        //- input(type="hidden", name="movie[_id]", value="#{movie.id}")
+        .form-group
+          label.col-sm-2.control-label(for="inputTitle") 电影名字
+          .col-sm-10
+            input#inputTitle.form-control(type="text", name="movie[title]", value="#{movie.title}")
+        .form-group
+          label.col-sm-2.control-label(for="inputDoctor") 电影导演
+          .col-sm-10
+            input#inputDoctor.form-control(type="text", name="movie[doctor]", value="#{movie.doctor}")
+        .form-group
+          label.col-sm-2.control-label(for="inputCountry") 国家
+          .col-sm-10
+            input#inputCountry.form-control(type="text", name="movie[country]", value="#{movie.country}")
+        .form-group
+          label.col-sm-2.control-label(for="inputYear") 上映年份
+          .col-sm-10
+            input#inputCountry.form-control(type="text", name="movie[year]", value="#{movie.year}")
+        .form-group
+          label.col-sm-2.control-label(for="inputanguage") 语种
+          .col-sm-10
+            input#inputanguage.form-control(type="text", name="movie[language]", value="#{movie.language}")
+        .form-group
+          label.col-sm-2.control-label(for="inputPoster") 海报地址
+          .col-sm-10
+            input#inputLanguage.form-control(type="text", name="movie[poster]", value="#{movie.poster}")
+        .form-group
+          .col-sm-offset-2.col-sm-10
+          button.btn.btn-default(type="submit") 录入
